Fixed the extra padding on the Challenges page on mobile as well as the extra padding in the footer

--- a/style.css
+++ b/style.css
@@ -360,4 +360,10 @@ footer>*{
     .info-Section{
         padding-bottom: 1rem;
     }
+    section:not(.container){
+        padding-inline: 2rem;
+    }
+    footer{
+        padding-inline: 3rem;
+    }
 }
